log
Thu 23 Mar 2023 02:01:55 AM UTC: 
 tests:  0|6
total_score: 0/70
36e1734
Thu 23 Mar 2023 07:44:59 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
74ec57c
Thu 23 Mar 2023 07:45:57 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
71cf0df
Thu 23 Mar 2023 07:46:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
00eb6c8
Thu 23 Mar 2023 07:46:18 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4b7db58
Thu 23 Mar 2023 07:46:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:6: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   33 |   if(list==NULL) return(NULL);
      |      ^~~~
      |      List
list.c:33:6: note: each undeclared identifier is reported only once for each function it appears in
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a78981c
Thu 23 Mar 2023 07:46:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1e92f43
Thu 23 Mar 2023 07:52:15 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c963282
Thu 23 Mar 2023 07:52:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a864e60
Thu 23 Mar 2023 07:53:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
69e95ff
